--- a/calculator.html
+++ b/calculator.html
@@ -35,18 +35,20 @@
             <td><label class="total"></label></td>
             <td><label class="balance"></label></td>
           </tr>
-        </tbody>
-        <tfoot>
           <tr id="summary">
             <td><label>Summary</label></td>
             <td><label class="items"></label></td>
             <td><input class="total"></td>
             <td><label class="balance"></label></td>
           </tr>
+        </tbody>
+        <tfoot>
+          <tr>
+            <td colspan="2" align="center"><button id="btn-calc">Calc</button></td>
+            <td colspan="2" align="center"><button id="btn-reset">Reset</button></td>
+          </tr>
         </tfoot>
       </table>
-      <button id="btn-calc">Calc</button>
-      <button id="btn-reset">Reset</button>
     </div>
   </body>
 </html>
